Changes made for css.
Dependencies of modules are now clickable and info comes in separate
tables. Need to work on css and generating xml files through JS.

--- a/tool.html
+++ b/tool.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
+<link rel="stylesheet" type="text/css" href="ReportAngular.css">
 <script type="text/javascript" src ="ReportAngular.js"></script>
 </head>
 <body>
@@ -13,6 +14,6 @@
 	<div id="check"></div>
 
 
-<div id="report.ctrlName"></div>
+<div id="report"></div>
 </body>
 </html>
