Created Folder structure and Css.
Ready to be merged with Master for first release.
V - 0.1
Creates tables based on module.
Module Dependencies, Controllers, directives and Services listed under a
module are shown in tables view.

--- a/demo/tool.html
+++ b/demo/tool.html
@@ -8,12 +8,13 @@
 </head>
 <body>
 	URL name
-	<input id="urlName" type="text" /> Module name
-	<input id="report.moduleName" type="text" />
-	<button onclick="getIndexPage()">Go</button>
+	<input id="urlName" type="text" onblur="checkVal()"/> Module name
+	<input id="report.moduleName" type="text" onblur="checkVal()"/>
+	<button id='go' onclick="getIndexPage()" disabled="disabled">Go</button>
 	<div id="check"></div>
 
 
 <div id="report"></div>
+<div id="create"></div>
 </body>
 </html>
